# gwb.js

./: Makefile  index.html
src/cordova/www/: index.html  init.js
src/electron/src/: index.html
src/grimaldi.gwb/: base  base.acc  cache_info  command.txt  fnames.inx  names.acc  names.inx  notes  snames.inx  strings.inx
src/i18n/: generate.mll  i18n.tsv
src/ml/: conf.ml  data.ml  dune  ezgw.ml  gwb.ml  gwdb.ml
src/ml/gwdb/: dune  gwdb.ml
src/templates/: compile.ml  oldestAlive.html.jingoo  oldestAlive.jinja2  perso_parents.jingoo  perso_siblings.jingoo  perso_summary.jingoo  perso_timeline.jingoo  perso_unions.jingoo  perso_utils.jingoo  person.html.jingoo  person.jinja2  searchPerson.html.jingoo  summary.html.jingoo  summary.jinja2  timeline.html.jingoo  updatePerson.html.jingoo  utils.jingoo  utils.jinja2
