(library
 (name gwdb)
 (wrapped false)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries js_of_ocaml geneweb.def geneweb.wserver geneweb.util geneweb.io)
 (modules gwdb)
 (flags       (:standard -no-keep-locs))
)


(executable
 (name gwb)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries gwdb geneweb js_of_ocaml jingoo)
 (modules Conf Data Ezgw Gwb Templates)
 (flags       (:standard -no-keep-locs))
)
