(library
 (name gwdb)
 (wrapped false)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries yojson js_of_ocaml geneweb.def geneweb.wserver geneweb.util geneweb.io)
 (modules gwdb)
 (flags       (:standard -no-keep-locs))
)

(executable
 (name gwb)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries gwdb gwxjg geneweb yojson js_of_ocaml jingoo)
 (modules Conf Gwb Templates I18n)
 (flags       (:standard -no-keep-locs))
)
